--- a/style.css
+++ b/style.css
@@ -370,6 +370,10 @@ template {
   *zoom: 1;
 }
 
+a {
+  text-decoration: none;
+}
+
 header {
   background-color: #eceef1;
 }
@@ -396,13 +400,20 @@ header {
 
 .signin-container {
   float: right;
+  margin: 10px;
 }
 
 .signin-container div {
   float: left;
 }
 .signin-container button {
-  float: right;
+  border-radius: 3px;
+  background: #0077c5;
+  border: 1px solid #4c4c4c;
+  color: #fff;
+  cursor: pointer;
+  padding: 8px 16px;
+  display: inline-block;
 }
 
 .signin-container a {
@@ -410,11 +421,129 @@ header {
   clear: both;
 }
 
+.signin-container-info {
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.signin-container-info div,
+.signin-container-info a {
+  width: 100%;
+  text-align: end;
+  margin-right: 10px;
+}
+
 .form-body {
   background-color: #eceef1;
   height: 770px;
 }
 
+.title {
+  text-align: center;
+  clear: both;
+}
+
+.title ul {
+  text-align: center;
+  margin: 20px;
+  padding: 0;
+}
+
+.form-body {
+  text-align: center;
+}
+
+.account-info label {
+  display: block;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+form {
+  margin: 0 auto;
+  border: 1px solid #c6c7cc;
+  border-radius: 5px;
+  font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow: hidden;
+  width: 380px;
+}
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  border-radius: 5px;
+  font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+.account-info {
+  background: #fff;
+  padding: 20px 20px 0 20px;
+}
+.account-info label {
+  margin-bottom: 10px;
+  margin-top: 20px;
+  float: left;
+}
+.account-info input {
+  background: #fff;
+  border: 1px solid #c6c7cc;
+  color: #636466;
+  padding: 6px;
+  margin-top: 6px;
+  width: 100%;
+}
+
+.account-info span {
+  font-weight: lighter;
+}
+
+.account-action {
+  background: #fff;
+  border-top: 0;
+  padding: 20px;
+}
+.account-action .btn {
+  background: #0077c5;
+  border: 1px solid #4c4c4c;
+  box-shadow: 5px 10px;
+  color: #fff;
+  cursor: pointer;
+  padding: 8px 16px;
+}
+.account-action label {
+  color: #7c7c80;
+  font-size: 12px;
+  float: left;
+  margin: 10px 0 0 20px;
+}
+
+.account-invisible-recaptcha {
+  background-color: #eceef1;
+  font-size: 10px;
+  color: #8d9096;
+  padding: 10px;
+}
+
+.small-info {
+  display: inline-block;
+  width: 60%;
+}
+
 footer {
+  position: relative;
   height: 60px;
+}
+
+footer a {
+  position: absolute;
+  top: 50%;
+  margin-left: 20px;
+  transform: translate(0%, -50%);
 }
